#pragma once

/**
 * @brief The GameResult enum defines the possibles outcomes of a chess match.
 */
enum class GameResult { NONE, DEFEAT, DRAW };
