#pragma once

/**
 * @brief The PieceColor enum defines the possible colors of a Piece.
 */
enum class PieceColor { BLACK, WHITE };
