#pragma once

/**
 * @brief The PieceType enum defines the possible types of a Piece.
 */
enum class PieceType { NONE, TOWER, HORSE, BISHOP, KING, QUEEN, PAWN };
