#pragma once

/**
 * @brief The TileStatus enum defines the possible states of a Tile.
 */
enum class TileStatus { NONE, SELECTED, MOVE_CANDIDATE, KILL_CANDIDATE };
