@startuml 'ChessFor2'

skinparam Linetype ortho

title 'ChessFor2'

package Enums {
enum TileStatus {
    IDLE
    SELECTED
    MOVE_CANDIDATE
    KILL_CANDIDATE
}

enum PieceColor {
    WHITE
    BLACK
}

enum PieceType {
    TOWER
    HORSE
    BISHOP
    QUEEN
    KING
    PAWN
}

enum GameResult {
    NONE,
    DEFEAT,
    DRAW
}
}

class ChessFor2 {
    + getGameTurn() : GameTurn
    + positionClicked(p:Position)
    + exitGame()
    + getTile(p : Position) : Tile*
}

class Tile {
    - status : TileStatus
    + Tile(c:TileColor)
    + setStatus() : TileStatus
    + setStatus(s:TileStatus)
    + setPiece(p:Piece)
    + isEmpty() : Boolean
    + getPiece() : Piece
    + clear()
}
Tile "1" -- "0..1" Piece

class ChessBoard {
    + getTile(p : Position) : Tile*
}
ChessFor2 "1" -right- "1" ChessBoard
ChessBoard "1" -- "64" Tile
ChessBoard "1" -- "0..1" Position : -tileSelected

class BaseUserIO {
    + BaseUserIO(game : ChessFor2)
}
ChessFor2 "1" -- "1" BaseUserIO

package GUI {
class Gui {
    + Gui(game : ChessFor2)
    + startInputCapture()
}
BaseUserIO <|-- Gui

class GuiRenderHelper {
    + GuiRenderHelper(window : Window, renderer : Renderer, game : ChessFor2)
    + getOffsetX() : Integer
    + getOffsetY() : Integer
    + getTileSize() : Integer
}
Gui "1" -left- "1" GuiRenderHelper
class GuiInputHelper {
    + GuiInputHelper(tileClickCb : Function, exitCb : Function)
    - inputLoop()
}
Gui "1" -down- "1" GuiInputHelper
}

abstract Piece {
    # color : PieceColor
    + getColor()) : PieceColor
    + {abstract} getType() : PieceType
    + {abstract} getMoves(p:Position) : List<Position>
    + {static} create(type : PieceType,  color : PieceColor) : Piece
}

class Pawn {
    + getType() : PieceType
    - direction : Integer
    + getMoves(p:Position) : List<Position>
}
Piece <|-left- Pawn

class Horse {
    + getType() : PieceType
    + getMoves(p:Position) : List<Position>
}
Piece <|-right- Horse

class LinearMovingPiece {
    # getMoves(directions List<Direction>, p:Position) : List<Position>
}
Piece <|-down- LinearMovingPiece

class Tower {
    + getType() : PieceType
    + getMoves(p:Position) : List<Position>
}
LinearMovingPiece <|-left- Tower

class Bishop {
    + getType() : PieceType
    + getMoves(p:Position) : List<Position>
}
LinearMovingPiece <|-right- Bishop

class Queen {
    + getType() : PieceType
    + getMoves(p:Position) : List<Position>
}
LinearMovingPiece <|-down- Queen

class King {
    + getType() : PieceType
    + getMoves(p:Position) : List<Position>
}
LinearMovingPiece <|-down- King

class Position {
    - x : Integer
    - y : Integer
    + Position(row:Integer, col:Integer)
    + getX() : Integer
    + getY() : Integer
}

ChessFor2 ..> Position

class GameTurn {
    - currentPlayer : PieceColor
'   - remainingTime : Chrono
    + getCurrentPlayer() : PieceColor
    + changeTurn()
}
ChessFor2 "1" *-- "1" GameTurn

class GameAnalyzer {
    + checkGameOver(currentPlayer : PieceColor) : GameResult
    + checkMovement(src : Position, dst : Position) : Boolean
    + movePiece(src : Position, dst : Position)
    + getMoves(p:Position) : List<Position>
    - List<Map<Piece*, Position>> : m_piecesByPlayer
}
ChessFor2 "1" *-- "1" GameAnalyzer
@enduml
